--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,7 @@
 <resources>
     <string name="app_name">메뉴머냐</string>
+    <string name="restaurant_info_price">가격</string>
+    <string name="restaurant_info_time">점심 운영시간</string>
+    <string name="restaurant_info_phone_number">전화번호</string>
+    <string name="restaurant_info_location_description">위치</string>
 </resources>
