feat: 메뉴 정보 조회 로직 구현 (#12)
* feat: 메뉴 정보 조회 로직 구현

* feat: 메뉴 정보 레이아웃 구현

* fix: 최초 ViewPager 생성시 데이터도 새롭게 받아오는 로직 제거

* fix: 가로 스크롤 뷰의 마진 값 변경

* feat: 가로 스크롤 뷰 아이템의 height가 wrap_content로 설정되도록 구현

* feat: 메뉴 '자세히 보기' 텍스트 구현

* feat: 메뉴 '자세히 보기' 텍스트 수정

* feat: 메뉴 다이얼로그 구현

* fix: 메뉴 다이얼로그의 제목과 내용 텍스트 간격 넓힘

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,7 @@
 <resources>
     <string name="app_name">메뉴머냐</string>
+
+    <string name="restaurant_info_menu_more"><u>자세히 보기</u></string>
     <string name="restaurant_info_price">가격</string>
     <string name="restaurant_info_time">점심 운영시간</string>
     <string name="restaurant_info_phone_number">전화번호</string>
