--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,6 @@
 <resources>
     <string name="app_name">메뉴머냐</string>
+    <string name="app_name_debug">[개발] 메뉴머냐</string>
 
     <string name="restaurant_info_menu_more"><u>자세히 보기</u></string>
     <string name="restaurant_info_price">가격</string>
