--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -7,4 +7,6 @@
     <string name="restaurant_info_time">점심 운영시간</string>
     <string name="restaurant_info_phone_number">전화번호</string>
     <string name="restaurant_info_location_description">위치</string>
+
+    <string name="location_permission_dialog_description">편리한 뷔페 검색을 위해 위치 서비스 사용에 동의 하시겠습니까?</string>
 </resources>
