--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,4 @@
-<resources>
+<resources xmlns:tools="http://schemas.android.com/tools">
     <string name="app_name">메뉴머냐</string>
     <string name="app_name_debug">[개발] 메뉴머냐</string>
 
@@ -12,4 +12,8 @@
     <string name="location_permission_dialog_description">편리한 뷔페 검색을 위해 위치 서비스 사용에 동의 하시겠습니까?</string>
     <string name="location_permission_denied_toast">위치 권한을 허용해주세요</string>
     <string name="location_permission_denied_forever_toast">[설정 > 애플리케이션 > 메뉴머냐]에서 위치 권한을 허용해주세요</string>
+
+    <string name="latest_app_version_update_message">안정적인 서비스 이용을 위해 앱을 업데이트 해주세요.</string>
+    <string name="google_play_store_link">market://details?id=com.woozoo.menumonya</string>
+    <string name="google_play_store_link_web">https://play.google.com/store/apps/details?id=com.woozoo.menumonya</string>
 </resources>
