--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -9,6 +9,9 @@
     <string name="restaurant_info_phone_number">전화번호</string>
     <string name="restaurant_info_location_description">위치</string>
 
+    <string name="restaurant_info_menu_report_button">내가 먼저 메뉴 제보하기</string>
+    <string name="restaurant_info_menu_report_description">메뉴는 매일 11시에 업데이트됩니다.</string>
+
     <string name="location_permission_dialog_description">편리한 뷔페 검색을 위해 위치 서비스 사용에 동의 하시겠습니까?</string>
     <string name="location_permission_denied_toast">위치 권한을 허용해주세요</string>
     <string name="location_permission_denied_forever_toast">[설정 > 애플리케이션 > 메뉴머냐]에서 위치 권한을 허용해주세요</string>
