--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -10,7 +10,8 @@
     <string name="restaurant_info_location_description">위치</string>
 
     <string name="restaurant_info_menu_report_button">내가 먼저 메뉴 제보하기</string>
-    <string name="restaurant_info_menu_report_description">메뉴는 매일 11시에 업데이트됩니다.</string>
+    <string name="restaurant_info_menu_report_description_online_available">메뉴는 평일 오전 11시에 업데이트됩니다</string>
+    <string name="restaurant_info_menu_report_description">해당 식당의 메뉴는 여러분들의 제보로 업데이트 됩니다</string>
 
     <string name="notice_dialog_description">원하시는 한식 뷔페의 지역을\n선택하시고, 메뉴를 확인해보세요!</string>
 
