feat: 제보하기 다이얼로그 구현

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -12,7 +12,7 @@
     <string name="restaurant_info_menu_report_button">내가 먼저 메뉴 제보하기</string>
     <string name="restaurant_info_menu_report_description_online_available">메뉴는 평일 오전 11시에 업데이트됩니다</string>
     <string name="restaurant_info_menu_report_description">해당 식당의 메뉴는 여러분들의 제보로 업데이트 됩니다</string>
-
+    <string name="restaurant_info_menu_report_dialog_text">한식뷔페의 메뉴판을 촬영해주세요.\n\n이동하시겠어요?</string>
     <string name="notice_dialog_description">원하시는 한식 뷔페의 지역을\n선택하시고, 메뉴를 확인해보세요!</string>
 
     <string name="location_permission_dialog_description">편리한 뷔페 검색을 위해 위치 서비스 사용에 동의 하시겠습니까?</string>
